  $monsters{$targetID}, making players getting incorrectly counted as monsters
  and causing various bugs such as ghost player images, and
  itemsTakeAuto_party not working.
- Do not automatically add stats over 99 base stat.
- Detect negative damage correctly. (unpack 'S1' => 's1')
- 's' command correctly displays Status Points >= 1000 now.

New features:
- statsAddAuto will now print a message when it increases a stat.
- Plugins Commands now work (unload, unload all, load, load all).
- More infomation for merchant shop ('al' command).
- Support for private RO server (which has only one real IP).
  To use this feature you must put the line 'private 1' in tables/servers.txt.
- config.txt now supports multi-line comments, like C/C++.
  /* indicates the beginning of a comment, and */ indicates the end.
- AI sequence will now be cleared when switching characters due to
  autoConfChange.
- items_control.txt can now have an 'all' option, just like pickupitems.txt.
  Example:
  # Store everything but nippers; keep nippers in inventory
  nipper 0 0 0
  all 0 1 0
- teleportAuto_[hp|sp|minAggressives] will now print a message when it is
  triggered.
- 'drop' command now works when AI is off, if you are only dropping one item.
- 'aiv' command will now indicate whether or not AI is on.
- "You [successfully refined/failed to refine] a weapon!" message implemented.
  (packet switch 018F)
- "storage [add|get]" commands now support item names,
  e.g. "storage get +5 Sword Mace [Andre]"
  Currently, item names containing commas may not work properly.
- "version" command tells you what version of openkore you are running.
- Show distance of player when public chat and add more log message of public chat.
  The format is like this.
  [Date Time][C] [Mapname BotsPosition] [TargetPosition] [dist=DistanceFromPlayer] ChatName : ChatMessage
- Monster weights. See
  http://openkore.sourceforge.net/forum/viewtopic.php?t=3890
- autoTalkCont will print a message when it is triggered.